2007-11-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.162.

2007-10-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Gtk2.pm (Gtk2::Builder::_do_connect): Don't use the qw//
	operator to qoute a flag value as it seems to cause parse failures
	on some perls.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.161.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;
	so automatic CPAN testers know which perl version we need.

	* t/GdkDnd.t: Handle get_selection() returning undef.

	* t/GtkPaned.t: Use SKIP instead of TODO for the unreliable resize
	verification tests.  TODOs that pass look like failures.

	* tools/genkeysyms.pl
	* tools/podifyenums.pl: Don't put timestamps into generated files
	so they don't get installed every single time even though there
	are no real changes.

	* xs/PangoLayout.xs: Fix leak in
	Gtk2::Pango::Layout::get_iter.  (Reported by Quentin Sculo in
	#482795)

2007-09-16	kaffeetisch

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-16	kaffeetisch

	* t/GtkIconView.t: Fix a test failure.

2007-09-15	kaffeetisch

	* t/01.GtkWindow.t
	* t/Gdk.t
	* t/GdkColor.t
	* t/GdkDisplay.t
	* t/GdkEvent.t
	* t/GdkKeys.t
	* t/GdkPango.t
	* t/GdkPixbuf.t
	* t/GdkWindow.t
	* t/GdkX11.t
	* t/GtkAboutDialog.t
	* t/GtkAction.t
	* t/GtkCellLayout.t
	* t/GtkEntry.t
	* t/GtkEntryCompletion.t
	* t/GtkIconTheme.t
	* t/GtkIconView.t
	* t/GtkMenuItem.t
	* t/GtkMenuToolButton.t
	* t/GtkPageSetup.t
	* t/GtkPaperSize.t
	* t/GtkPrintSettings.t
	* t/GtkRange.t
	* t/GtkStatusIcon.t
	* t/GtkTextBuffer.t
	* t/GtkTextMark.t
	* t/GtkToolItem.t
	* t/GtkTreeView.t
	* t/GtkWidget.t
	* t/PangoCairo.t
	* t/PangoFont.t
	* t/PangoLayout.t
	* xs/Gdk.xs
	* xs/GdkDisplay.xs
	* xs/GdkEvent.xs
	* xs/GdkKeys.xs
	* xs/GdkPango.xs
	* xs/GdkWindow.xs
	* xs/GdkX11.xs