@@ -31,6 +31,7 @@ Marc 'HE' Brockschmidt   marc at marcbrockschmidt dot de
 Daniel Kasak             dkasak at nusconsulting dot com dot au
 Grant McLean		 grant at mclean dot net dot nz
 Philipp Rumpf		 prumpf at gmail dot com
+Kevin Ryde		 user42 zip com au
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
